# jarvis-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  claude-review.yml  deploy.yml
app/: __init__.py  main.py
app/agents/: __init__.py
app/api/: __init__.py  chat.py  deps.py  events.py  profile.py  seller.py
app/core/: __init__.py  _unicode_variation_data.py  auth.py  config.py  conversation.py  errors.py  llm.py  logging.py  observability.py  pg_resilience.py  pg_store.py  ratelimit.py  stream.py  text.py  unicode_security.py
app/pipelines/: __init__.py  artifact_store.py  artifacts_batch.py  category_search.py  category_seed.py  compare.py  embedding.py  enrichment.py  pg_artifact_store.py  run_batch.py  scheduler.py  seed_loader.py
app/schemas/: __init__.py  chat.py  events.py  profile.py  seller.py  spring.py
app/services/: __init__.py  order_seed.py  search_service.py  spring_client.py
deploy/: docker-compose.demo.yml
docs/: PRD-RECOMMEND-PROFILE-AGENT.md  README.md  api-spec.md  lessons.md  llm-provider-openai-smoke.md  local-integration-guide.md  mvp-plan.md  mvp-todo.md  roadmap.md
docs/specs/: DESIGN-CATEGORY-HYBRID-59.md  DESIGN-SELLER-TOOLS-STAGE1.md  EVAL-OBS-PLAN-001.md  FE-CONTRACT-SELLER-CHAT.md  GIT-SYNC-PLAN-20260720.md  HANDOFF-GIT-SYNC-20260719.md  HANDOFF-SELLER.md  HANDOFF-SELLER_2.md  HANDOFF-SELLER_3.md  IMPL-PLAN-SELLER-001.md  README.md  REALIGN-SELLER-20260719.md  REVIEW-SELLER-STAGE2.md  REVIEW-SELLER-STAGE3.md  SELLER-FINAL-RISKS.md  SELLER-FINAL-ROADMAP.md  SELLER-FINAL-TECH.md  SELLER-FINAL-WORKFLOW.md  SELLER-WORKFLOW.dot  SMOKE-SELLER-41.md  SPEC-CART-001.md  SPEC-CATALOG-DATA-001.md  SPEC-PROFILE-001.md  SPEC-RECOMMEND-001.md  SPEC-SELLER-001.md
scripts/: check_openai_env.py  check_spring_connection.py  generate_unicode_security_data.py  load_sample_100.py  smoke_seller_chat.py
tests/: __init__.py  _fakes.py  conftest.py
tests/integration/: __init__.py  _stubs.py  conftest.py  test_auth_e2e_flow.py  test_batch_flow_e2e.py  test_buyer_flow_e2e.py  test_buyer_thread_store.py  test_client_fixture_isolation.py  test_degrade_e2e.py  test_harness_determinism.py  test_pg_artifact_store.py  test_pg_conversation_store.py  test_pg_profile_store.py  test_profile_flow_e2e.py
tests/smoke/: test_embedding_smoke.py
tests/unit/: __init__.py  _jwks.py  conftest.py  test_artifact_store.py  test_artifact_store_factory.py  test_artifacts_batch.py  test_auth_e2e.py  test_auth_jwks.py  test_cart.py  test_catalog_schema.py  test_category_mapping.py  test_category_search.py  test_category_seed.py  test_category_select.py  test_check_spring_connection_script.py  test_config.py  test_config_category.py  test_config_embedding.py  test_config_profile.py  test_config_seller.py  test_contract_docs.py  test_decompose.py  test_deps.py  test_embedding.py  test_fanout.py  test_health.py  test_infra.py  test_llm_provider.py  test_load_sample_100.py  test_main_lifespan.py  test_observability.py  test_pg_resilience.py  test_profile.py  test_profile_idle_timeout.py  test_recommendation.py  test_run_batch_cli.py  test_scheduler.py  test_schemas_camel.py  (+18 more)
(+53 files in other folders)
