[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Jarvis — agentic commerce AI server (FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    # crypto extra pulls `cryptography` — required for RS256 + JWKS verification (auth.py jwks mode).
    "pyjwt[crypto]>=2.9",
    "langchain>=1.3.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "pre-commit>=4.0",
    # cryptography is used by JWKS auth tests to generate a local RSA key pair (pulled by pyjwt[crypto] too).
    "cryptography>=43",
]
# 고도화(post-MVP): 셀프호스트 임베딩. MVP 검색은 Spring 위임이라 미사용이나, 무해하게 유지한다.
# 파이프라인/Docker 빌드에서 `--group embedding` 으로만 설치.
embedding = [
    "sentence-transformers>=3.3",
    "torch>=2.5",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Pin torch to the CPU wheel index — 고도화 셀프호스트 임베딩(1024-dim, CPU) 용.
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
