[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Jarvis — agentic commerce AI server (FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    # crypto extra pulls `cryptography` — required for RS256 + JWKS verification (auth.py jwks mode).
    "pyjwt[crypto]>=2.9",
    "langchain>=1.3.14",
    # Google gemini-embedding-001 API 클라이언트 (이슈 #31, api-spec §4.8 v0.15.14 — 셀프호스트 torch 폐기).
    "google-genai>=1.0",
    # pg-catalog(pgvector) 벡터 컬럼 psycopg3 코덱 등록 (이슈 #31).
    "pgvector>=0.3",
    # I-17 배치 주기 증분 pull 스케줄러 (이슈 #31, in-process). v4 는 아직 alpha 라 3.x 안정판 고정.
    "apscheduler>=3.10,<4",
    # OpenAI provider (이슈 #40, LLM_PROVIDER=openai). ChatOpenAI 래퍼.
    "langchain-openai>=1.3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "pre-commit>=4.0",
    # cryptography is used by JWKS auth tests to generate a local RSA key pair (pulled by pyjwt[crypto] too).
    "cryptography>=43",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: 실제 외부 API(Google 임베딩 등) 호출 — 기본 실행에서 제외, 명시적 실행시만 동작",
    "integration: 실 인프라(pg-catalog 등) 필요 — 기본 실행에서 제외",
]
addopts = "-m 'not smoke and not integration'"

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
